# rust-python-interop

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
rust-from-python-via-pyo3/: Cargo.toml  Makefile  pyproject.toml  test.py
rust-from-python-via-pyo3/src/: lib.rs
