[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "rust-from-python-via-pyo3"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry]
name = "rust-from-python-via-pyo3"
version = "0.1.0"
description = "Calling Rust from Python"
authors = ["Sebastian Winkler <sebwink@pm.me>"]
license = "MIT"
readme = "README.md"
#packages = [
#    { include = "rod_cutting", from="examples/rod_cutting" },
#]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
maturin = "^0.14.13"


